--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,10 @@
     <button id="connectbutton">Connect with peer</button>
     <input id="inputfile" type="file">
     <button id="sharefile">Share file</button>
+    <div id="userId"></div>
+    <div id = information>
 
+    </div>
     <!-- Import SocketIO for signalling -->
     <script src="/socket.io/socket.io.js"></script>
 
